// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Category example with text 1`] = `
.emotion-3 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-2 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 24px;
  padding-bottom: 24px;
  background: linear-gradient(90deg,#924A8B 0.42%,#DB4D75 116.16%);
}

@media screen and (min-width:768px) {
  .emotion-2 {
    padding-left: 24px;
    padding-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

.emotion-0 {
  font-family: Nunito,-apple-system,sans-serif;
  font-size: 36px;
  line-height: 1.2;
  font-weight: 400;
  margin-top: 24px;
  margin-bottom: 24px;
  padding: 0;
  margin: 0;
  color: #FFFFFF;
}

.emotion-1 {
  margin-bottom: 0;
  color: #FFFFFF;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <h1
      className="emotion-0"
    >
      Title goes here
    </h1>
    <p
      className="emotion-1"
    >
      Text goes here
    </p>
  </div>
</div>
`;

exports[`Storyshots Elements|Category example without text 1`] = `
.emotion-2 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-1 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 24px;
  padding-bottom: 24px;
  background: linear-gradient(90deg,#924A8B 0.42%,#DB4D75 116.16%);
}

@media screen and (min-width:768px) {
  .emotion-1 {
    padding-left: 24px;
    padding-right: 24px;
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

.emotion-0 {
  font-family: Nunito,-apple-system,sans-serif;
  font-size: 36px;
  line-height: 1.2;
  font-weight: 400;
  margin-top: 24px;
  margin-bottom: 24px;
  padding: 0;
  margin: 0;
  color: #FFFFFF;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Title goes here
    </p>
  </div>
</div>
`;
